--- a/html/index.html
+++ b/html/index.html
@@ -23,5 +23,10 @@
         </div>
     </div>
     <div class="container" id="thermostats"></div>
+    <div class="container">
+        <div class="row" style="margin-top: 10rem">
+            <h6 id="version"></h6>
+        </div>
+    </div>
 </body>
 </html>
