--- a/html/login.html
+++ b/html/login.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="img/favicon.png">
     <script src="js/jquery.min.js"></script>
     <script src="/jsconfig.js"></script>
-    <script src="js/version.js"></script>
+    <script src="js/login.js"></script>
 </head>
 <body>
     <div class="container">
@@ -28,12 +28,7 @@
             <div class="four columns"><input type="password" style="width: 100%" id="loginPassword" /></div>
         </div>
         <div class="row">
-            <div class="four columns offset-by-four"><button type="submit" style="width: 100%" class="button button-primary">Login</button></div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row" style="margin-top: 10rem">
-            <h6 id="version"></h6>
+            <div class="four columns offset-by-four"><button type="submit" id="loginButton" style="width: 100%" class="button button-primary">Login</button></div>
         </div>
     </div>
 </body>
