--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,9 @@
         <div class="row" style="margin-top: 10rem">
             <h6 id="version"></h6>
         </div>
+        <div class="row">
+            <div class="one columns offset-by-eleven" id="logoutDiv"></div>
+        </div>
     </div>
 </body>
 </html>
